038/kubia-node-port-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: kubia-node-port-service
spec:
  type: NodePort
  ports:
    - port: 8080
      nodePort: 30000
  selector:
    app: kubia-node-port
